Rules Hit and Transactions Header Alignment Fix (#657)
Fix

--- a/src/pages/case-management-item/UserCaseDetails/RulesHitCard/CollapseHeader/index.module.less
+++ b/src/pages/case-management-item/UserCaseDetails/RulesHitCard/CollapseHeader/index.module.less
@@ -4,10 +4,17 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+  width: 100%;
 }
 
 .fields {
   display: grid;
   grid-template-columns: 2fr 4fr 1fr 1fr;
   gap: 16px 28px;
+  width: 100%;
+}
+
+.ant-collapse-header,
+.ant-collapse-header-text {
+  width: 100% !important;
 }
