--- a/src/pages/case-management-item/UserCaseDetails/RulesHitCard/styles.module.less
+++ b/src/pages/case-management-item/UserCaseDetails/RulesHitCard/styles.module.less
@@ -8,4 +8,15 @@
   border: 1px solid @fr-colors-purpleGrayTint !important;
   border-radius: 3px !important;
   margin-bottom: 28px;
+  width: 100%;
+
+  :global {
+    .ant-collapse-header {
+      width: 100% !important;
+    }
+
+    .ant-collapse-header-text {
+      width: 100% !important;
+    }
+  }
 }
